# free-to-play-games-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  LICENSE  README.md  REFERENCE.md  free-to-play-games.go  go.mod
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  features.lua  free-to-play-games.rockspec  free-to-play-games_sdk.lua  free-to-play-games_types.lua
php/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  composer.json  config.php  features.php  (+1 more)
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  freetoplaygames_sdk.py  freetoplaygames_types.py  pyproject.toml
py/core/: context.py  error.py  helpers.py  result.py  spec.py  utility_type.py
py/entity/: game_entity.py
py/feature/: audit_feature.py  base_feature.py  debug_feature.py  log_feature.py  proxy_feature.py  streaming_feature.py  test_feature.py  timeout_feature.py
py/test/: runner.py  test_exists.py  test_feature.py  test_game_direct.py  test_game_entity.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py
py/utility/: clean.py  feature_add.py  feature_hook.py  fetcher.py  make_error.py  make_fetch_def.py  make_options.py  make_request.py  make_result.py  make_url.py  param.py  prepare_path.py  register.py  result_body.py  result_headers.py  transform_request.py  transform_response.py
(+407 files in other folders)
